--- a/public/index.html
+++ b/public/index.html
@@ -16,11 +16,7 @@
 
         <div class="trip-main">
           <section class="trip-main__trip-info  trip-info">
-            <div class="trip-info__main">
-              <h1 class="trip-info__title">My BigTrip</h1>
-
-              <p class="trip-info__dates">Sometimes…</p>
-            </div>
+              <!-- Info -->
           </section>
           <div class="trip-main__trip-controls  trip-controls">
             <div class="trip-controls__filters">
